<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/googleg_standard_color_18"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@android:drawable/sym_action_chat"
            android:title="@string/messages" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/googleg_standard_color_18"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/googleg_standard_color_18"
                android:title="@string/settings" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_none"
        android:title=""
        android:visible="false"/>

</menu>
